--- a/src/pages/beranda/Beranda.css
+++ b/src/pages/beranda/Beranda.css
@@ -1,12 +1,16 @@
 .hero-slider {
   position: relative;
-  width: 100%;
-  height: 90vh;
+  width: 85%;
+  height: 85vh;
+  padding: 3rem;
+  margin-left: auto;
+  margin-right: auto;
   overflow: hidden;
   display: flex; 
   align-items: center;
   justify-content: center;
   text-align: center;
+  border-radius: 50px;
 }
 
 .slide {
@@ -20,13 +24,13 @@
 }
 
 .slide::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 03); /* overlay gelap */
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3); 
 }
  
 .slide:nth-child(1) { animation-delay: 0s; }
