--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,12 @@ html, body, #root {
 
 .content {
   flex: 1;
+  padding-top: 80px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    padding-top: 70px;
+  }
 }
 
